--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <div class="nevbar">
             <ul class="nev-menu">
-                <li><a href="indexCSS.html">Introduce Myself</a></li>
+                <li><a href="index.html">Introduce Myself</a></li>
                 <li><a href="html/myAdvisor.html">My advisor</a></li>
                 <li><a href="html/myActivity.html">My activity</a></li>
             </ul>
