--- a/index.html
+++ b/index.html
@@ -1,56 +1,60 @@
 <!DOCTYPE html>
 <html>
-
     <head>
-        <title>My CSTU Passport</title>
-        <link rel="stylesheet" href="css/style.css">
+      <title>My CSTU Passport</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="css/style.css">
     </head>
-
 
     <body>
 
-        <div class="nevbar">
-            <ul class="nev-menu">
-                <li><a href="index.html">Introduce Myself</a></li>
-                <li><a href="html/myAdvisor.html">My advisor</a></li>
-                <li><a href="html/myActivity.html">My activity</a></li>
-            </ul>
+      <div class="header">
+        <h1>This is my profile</h1> 
+      </div>
+
+      <div class="row">
+        <div class="col-3 col-s-3 menu">
+          <ul>
+            <li><a href="index.html">Introduce Myself</a></li>
+            <li><a href="html/myAdvisor.html">My advisor</a></li>
+            <li><a href="html/myActivity.html">My activity</a></li>
+          </ul>
         </div>
 
-        <div class="box">
-
-            <h1>My Profile</h1>
-            
-            <center>
-            <img src="image/mypic.jpg" width="250" height="350">
-            </center>
-
-            <br>
-            <p id="para1"><b>Name</b> : Noppawat Jamjumrus
-            <br><b>Nickname</b> : Gin
-            <br><b>Sex</b> : male
-            <br><b>My birthday</b> : 13 sep 2004
-            <br><b>My IG</b> : <a href="https://www.instagram.com/ginnn888/"><b>ginnn888</b></a>
+        <div class="col-6 col-s-9 para1">
+          <h1>My Profile</h1> <br>
+            <p >
+              <ul>
+                <li><b>Name</b> : Noppawat Jamjumrus</li> <br>
+                <li><b>Nickname</b> : Gin</li> <br>
+                <li><b>Sex</b> : male</li> <br>
+                <li><b>My birthday</b> : 13 sep 2004</li> <br>
+                <li><b>My IG</b> : <a href="https://www.instagram.com/ginnn888/"><b>ginnn888</b></a></li> <br>
+                <li><b>My Favorit sport</b> : Basketball</li> <br>
+                <li><b>My Favorit hobby</b> : Play games</li> <br>
+                <li><b>My Favorit song</b> : <a href="https://www.youtube.com/watch?v=89ahmLZMHBs"><b>TATTOO COLOUR - CINDERELLA</b></a></li> <br>
+                <li><b>My Favorit food</b> : กะเพราหมูกรอบไข่ดาว ไม่พริก</li> <br>
+                <li><b>My Favorit color</b> : Black</li> <br>
+              </ul>
             </p>
+        </div>
 
-            <h2>Know me more</h2>
-
-            <center>
+        <div class="col-3 col-s-12">
+          <div class="aside">
+            <h2>This is me!!</h2>
+            <img src="image/mypic.jpg" width="250" height="350"> <br>
             <video src="VDO/myvid.mp4" width="250" height="350" controls>
-                video not supported
+              video not supported
             </video>
-            </center>
+          </div>
+        </div>
+      </div>
 
-            <br>
-            <p id="para1"><b>My Favorit sport</b> : Basketball
-            <br><b>My Favorit hobby</b> : Play games
-            <br><b>My Favorit song</b> : <a href="https://www.youtube.com/watch?v=89ahmLZMHBs"><b>TATTOO COLOUR - CINDERELLA</b></a>
-            <br><b>My Favorit food</b> : กะเพราหมูกรอบไข่ดาว ไม่พริก
-            <br><b>My Favorit color</b> : Black
-            </p>
-            
-        </div> 
+      <div class="footer">
+        <p>Nice to meet you</p>
+      </div>
 
     </body>
-
 </html>
+
+
